@@ -4,6 +4,7 @@ Mantis ChangeLog
 
  * Sec #3595: bug_view_page.php: restricted custom fields are shown.
  * Sec #3596: print_bugnote_inc.php: private bugnotes are visible for not granted users (thanks to yarik123).
+ * Sec #3611: Mask passwords when printing detailed error information.
  * Enh #1088: Formatting of text in bugnotes, description areas.
  * Enh #1649: Replace 'Assign to Me' with 'Assign To:' and dropdown of developers.
  * Enh #3362: Generic email notifications.
